# LLMEvaluation

./: .env  .env.example  .gitignore  conftest.py  main.py  pyproject.toml
.deepeval/: .deepeval_telemetry.txt
Section2_UsingLocalLLMForActualDataCreation/: UsingLLMWithLangChain.ipynb
Section2_UsingLocalLLMForActualDataCreation/.deepeval/: .deepeval  .deepeval-cache.json  .deepeval_telemetry.txt  .latest_test_run.json  .temp_test_run_data.json
Section3_TestingRAGApplication/: TestingRAG.ipynb
datasets/: qa_dataset.json
src/: llm.py  prompts.py
tests/: test_bias.py  test_hallucination.py  test_qa.py  test_summarization.py
